feat: typecast-python SDK 의존성 추가 및 버전 업데이트 (v0.2.0)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "listener"
-version = "0.1.0"
+version = "0.2.0"
 description = "macOS 음성 인식 리스너 (SFSpeechRecognizer + PyObjC)"
 requires-python = ">=3.13"
 dependencies = [
@@ -8,6 +8,7 @@ dependencies = [
     "pyobjc-framework-Cocoa>=12.1",
     "pyobjc-framework-AVFoundation>=12.1",
     "edge-tts",
+    "typecast-python",
 ]
 
 [project.scripts]
